# local-dream

./: .gitignore  .gitmodules  build-local.sh  build-native.ps1  build-sm8850.ps1  build-sm8850.sh  build.bat  build.sh  claude.md  gradle.properties  rebuild-native.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/debug/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/debug/res/values/: ic_launcher_background.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakePresets.json  SampleApp.patch
app/src/main/cpp/llm/: CMakeLists.txt  CMakePresets.json
app/src/main/cpp/llm/src/: GenieWrapper.cpp  GenieWrapper.hpp  PromptHandler.cpp  PromptHandler.hpp  main.cpp
app/src/main/cpp/src/: Config.hpp  DPMSolverMultistepScheduler.hpp  FlowMatchScheduler.hpp  Pipeline.hpp  PipelineAnima.hpp  PipelineSd15Cpu.hpp  PipelineSd15Npu.hpp  PipelineSdxl.hpp  PromptCache.hpp  QnnModel.hpp  RequestParser.hpp  TextEncoder.hpp  Tiling.hpp  main.cpp
app/src/main/res/values/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: network_security_config.xml
docs/: 2026-06-27-qnn-sdk-2.45-build-success.md  2026-06-27-qnn-sdk-2.45-upgrade-status.md  2026-06-28-mnn-3.6.0-qnn-2.39-build.md  android-dlopen-limitation.md  architecture.md  model-export-import.md  model-import-export.md  native-build-guide.md  sm8850-build.md  usage.md
docs/patches/: mnn-ghfast-mirror.patch  sentencepiece-ghfast-mirror.patch
gradle/: libs.versions.toml
(+35 files in other folders)
